<resources>
    <string name="app_name">Poker asstistant</string>
    <string name="All_In">All In!</string>
    <string name="You_Will_Win">You will win</string>
    <string name="Where_do_you_see_your_cards">Where do you see your cards?</string>
    <string name="What_opponents_did_before_you">What opponents did before you?</string>
    <string name="What_opponents_did_after_you_raised">What opponents did after you raised?</string>
    <string name="Check">Check!</string>
    <string name="You_have_chance_to_win">You have chance to win</string>
    <string name="What_others_did">What others did?</string>
    <string name="Go_to_flop">Go to flop</string>
    <string name="What_hands_do_you_have">What hands do you have?</string>
    <string name="Fold">Fold!</string>
    <string name="Your_cards_arent_that_good">Your cards are not that good</string>
    <string name="Open_raise_3xBB">Open Raise 3xBB</string>
    <string name="Where_are_you_sitting">Where are you sitting?</string>
    <string name="Start">Start</string>
    <string name="How_to_play">How to play</string>
    <string name="Table">Table</string>
    <string name="Share">Share</string>
    <string name="Rate">Rate</string>
    <string name="You_won">You Won!</string>
    <string name="Congrats">Congrats!!!</string>
    <string name="Other">Other</string>
    <string name="Again">Again</string>
</resources>
