<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_start"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context="com.Sam.samvel.pokerasstistant.Start">
    <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="Poker Bot"
        android:textSize="70dp"
        android:layout_centerHorizontal="true"
        android:textColor="#ffff00"
        android:layout_marginTop="30dp"
        android:id="@+id/name"/>
    <Button
        android:layout_height="wrap_content"
        android:layout_width="150dp"
        android:text="@string/Start"
        android:textSize="25dp"
        android:background="@drawable/button_bg_style"
        android:id="@+id/b_start"
        android:onClick="onStartClicked"
        android:alpha="0.7"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="600px"/>
    <Button
        android:layout_height="wrap_content"
        android:layout_width="300dp"
        android:text="@string/How_to_play"
        android:textSize="25dp"
        android:background="@drawable/button_bg_style"
        android:id="@+id/b_tut"
        android:onClick="onTut"
        android:alpha="0.7"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="900px"/>
    <Button
        android:layout_height="wrap_content"
        android:layout_width="200dp"
        android:text="@string/Table"
        android:textSize="25dp"
        android:background="@drawable/button_bg_style"
        android:id="@+id/b_table"
        android:onClick="onTable"
        android:alpha="0.7"
        android:layout_marginTop="1200px"
        android:layout_centerHorizontal="true" />
    <Button
        android:layout_height="wrap_content"
        android:layout_width="200dp"
        android:text="@string/Share"
        android:textSize="25dp"
        android:background="@drawable/button_bg_style"
        android:id="@+id/share"
        android:onClick="onTable"
        android:alpha="0.7"
        android:layout_marginTop="1500px"
        android:layout_centerHorizontal="true"/>
    <Button
        android:layout_height="wrap_content"
        android:layout_width="200dp"
        android:text="@string/Rate"
        android:textSize="25dp"
        android:background="@drawable/button_bg_style"
        android:id="@+id/rate"
        android:onClick="onTable"
        android:alpha="0.7"
        android:layout_marginTop="1800px"
        android:layout_centerHorizontal="true"/>
</RelativeLayout>
